--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core:
   cloud_firestore:
   datetime_picker_formfield:
+  image_picker: ^0.8.0+3
+  flutter_localizations:
+    sdk: flutter
+  intl: 0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     -  images/
+    -  language/en.json
+    -  language/ur.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
