--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,14 @@ dependencies:
   google_maps_place_picker:
   geolocator:
   cached_network_image:
+  google_sign_in:
   provider:
   firebase_auth:
   firebase_core:
   cloud_firestore:
   datetime_picker_formfield:
   image_picker: ^0.8.0+3
-  flutter_localizations:
-    sdk: flutter
-  intl: 0.17.0
+  easy_localization: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     -  images/
-    -  language/en.json
-    -  language/ur.json
+    -  assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
