--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   firebase_core:
   cloud_firestore:
   datetime_picker_formfield:
-  image_picker: ^0.8.0+3
-  easy_localization: ^3.0.0
+  image_picker:
+  easy_localization:
 
 dev_dependencies:
   flutter_test:
