--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,17 +39,24 @@ dependencies:
   firebase_auth:
   firebase_core:
   cloud_firestore:
-  firebase_storage:
   datetime_picker_formfield:
   image_picker:
-  firebase_messaging:
-  flutter_local_notifications:
   easy_localization:
   geocoding:
+  flutter_local_notifications:
+  firebase_messaging:
+  firebase_storage:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/cover.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
